change popup style

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container post-container">
   <!-- location selection -->
-  <section class="alert alert-success location-alert" style="display: none">
+  <section class="alert alert-info location-alert" style="display: none">
     <span>
       <span><%= t(".suggest_location_message_1") %></span>
       <span class="city label label-success"></span>
@@ -8,16 +8,16 @@
     </span>
     <div class="btn-container">
       <button class="btn btn-danger no-btn"><%= t(".no_btn") %></button>
-      <button class="btn btn-info yes-btn"><%= t(".yes_btn") %></button>
+      <button class="btn btn-success yes-btn"><%= t(".yes_btn") %></button>
     </div>
   </section>
 
-  <section class="alert alert-success location-select" style="display: none">
+  <section class="alert alert-info location-select" style="display: none">
     <p><%= t(".location_selection_message") %></p>
     <%= select "location", "location", LOCATION_LIST.each.map {|location| I18n.locale == :vi ? [location[:displayName], location[:id]] : [location[:displayNameEN], location[:id]]} %>
     <div class="btn-container">
       <button class="btn btn-danger no-btn"><%= t(".no_btn") %></button>
-      <button class="btn btn-info yes-btn"><%= t(".reload_page_btn") %></button>
+      <button class="btn btn-success yes-btn"><%= t(".reload_page_btn") %></button>
     </div>
   </section>
 
