--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,13 @@
   
   <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
 </head>
-<body data-no-turbolink='true'>
+
+<% if (controller.controller_name == 'campaigns' and action_name == 'show') || (controller.controller_name == 'posts' and action_name == 'show')%>
+  <body data-no-turbolink="true">
+<% else %>
+  <body >
+<% end %>
+
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-569662315d82736c" async="async"></script>
 <div id="fb-root"></div>
