style and localize message

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,3 +1,4 @@
-<div class="container events-list">
+<div class="container p-b-3">
+  <h2 class="section-header"><%= t('menu_item_campaigns') %></h2>
   <%= render 'campaigns' %>
 </div>
