--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -271,6 +271,8 @@
               '<a class="post-title" href="posts/' + data[index].id + '">' + data[index].title  + '</a>' +
             '</div>';
           }
+
+          $("#nearby-posts-container").html(htmlString);
         });
       });
 
