--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 </section>
 <section class="overview">
   <div class="row">
-    <%= image_tag "old_stuffs.jpg", class: "col-xs-12 col-sm-12 col-md-6 col-lg-6" %>
+    <%= image_tag "finding_stuffs.jpg", class: "col-xs-12 col-sm-12 col-md-6 col-lg-6" %>
     <div class="content col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <h3><%= t(".overview.title") %></h3>
       <p><%= t(".overview.message") %></p>
