--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -32,7 +32,6 @@
 
         <div class="col-md-6">
           <h3> <%= "Quyên góp sẽ kết thúc trong #{@campaign.remaining_days} ngày nữa" %> </h3>
-
           <% @campaign.campaign_items.each do |item| %>
             <h4>
               <%= "#{item.progress}% của #{item.target_qty} #{item.label}" %>
@@ -62,7 +61,7 @@
           </form>
         </div>
 
-        <div class="col-md-12">
+        <div class="col-md-12 campaign-location">
           <%= @campaign.location %>
         </div>
 
