--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,39 +30,44 @@
   </div>
 
 <div class="row post-content">
-  <div class="row col-md-2 col-lg-2 col-s-12 col-xs-12 filter-container">
-    <div class="col-xs-11 col-s-11">
-      <div>
-        <h6><%= I18n.t('posts.form.location') %></h6>
-        <%= select_tag :location_id, options_for_select(location_options, current_location), class: 'chosen-it' %>
-      </div>
+  <% if @posts.count > 0 %>
+    <div class="row col-md-2 col-lg-2 col-s-12 col-xs-12 filter-container">
+      <div class="col-xs-11 col-s-11">
+        <div>
+          <h6><%= I18n.t('posts.form.location') %></h6>
+          <%= select_tag :location_id, options_for_select(location_options, current_location), class: 'chosen-it' %>
+        </div>
 
-      <hr/>
-      <div>
-        <ul class="category-list" style="padding: 0">
-          <h6><%= I18n.t('posts.form.category') %></h6>
+        <hr/>
+        <div>
+          <ul class="category-list" style="padding: 0">
+            <h6><%= I18n.t('posts.form.category') %></h6>
 
-          <li>
-            <%= active_link_to search_posts_path({city: current_location}), active: /^((?!category).)*$/, class: 'btn btn-outline btn-sm btn-category' do %>
-              <i class="fa fa-globe"></i>
-              <span class="text"><%= t('category.all') %></span>
-            <% end %>
-          </li>
-
-          <% Category.all.each do |c| %>
             <li>
-              <%= active_link_to search_posts_path({category: c.id, city: current_location}), active: /category=[0-9,]*#{c.id}/, class: 'btn btn-outline btn-sm btn-category' do %>
-                <i class="fa <%= c.fa_icon %>"></i>
-                <span class="text"><%= c.display_name %></span>
+              <%= active_link_to search_posts_path({city: current_location}), active: /^((?!category).)*$/, class: 'btn btn-outline btn-sm btn-category' do %>
+                <i class="fa fa-globe"></i>
+                <span class="text"><%= t('category.all') %></span>
               <% end %>
             </li>
-          <% end %>
-        </ul>
+
+            <% Category.all.each do |c| %>
+              <li>
+                <%= active_link_to search_posts_path({category: c.id, city: current_location}), active: /category=[0-9,]*#{c.id}/, class: 'btn btn-outline btn-sm btn-category' do %>
+                  <i class="fa <%= c.fa_icon %>"></i>
+                  <span class="text"><%= c.display_name %></span>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
       </div>
+
+      <a href="#" class="filter-toggle col-xs-1 col-s-1 btn btn-info-outline"><i class="fa fa-filter"></i></a>
     </div>
 
-    <a href="#" class="filter-toggle col-xs-1 col-s-1 btn btn-info-outline"><i class="fa fa-filter"></i></a>
-  </div>
+  <% else %>
+    <p class="empty-message" style="color: #d9534f;"><%= t(".empty_message") %><p>
+  <% end %>
 
   <div class="col-md-10 posts-container">
     <%= will_paginate @posts, class: 'top-pagination pull-right' %>
