hide heading in onboarding page

--- a/app/assets/stylesheets/multi-screen.scss
+++ b/app/assets/stylesheets/multi-screen.scss
@@ -243,7 +243,7 @@ html, body {
       overflow-y: scroll;
 
       .welcome-message {
-        h1, p {
+        h1, h4, p {
           display: none;
         }
       }
