--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <%= csrf_meta_tags %>
   
   <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
+  <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
 </head>
 
 <% if (controller.controller_name == 'campaigns' and action_name == 'show') || (controller.controller_name == 'posts' and action_name == 'show')%>
