--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <section class="introduction">
   <div class="ads">
-    <%= image_tag "home_bg.jpg" %>
+    <%= image_tag "donations_hires.jpg", class: "img-responsive" %>
     <div class="info">
       <h3><%= t(".title_1") %></h3>
       <h3><%= t(".title_2") %></h3>
@@ -14,7 +14,7 @@
 </section>
 <section class="overview">
   <div class="row">
-    <%= image_tag "finding_stuffs.jpg", class: "col-xs-12 col-sm-12 col-md-6 col-lg-6" %>
+    <%= image_tag "find_stuff_2.jpg", class: "col-xs-12 col-sm-12 col-md-6 col-lg-6 img-responsive" %>
     <div class="content col-xs-12 col-sm-12 col-md-6 col-lg-6">
       <h3><%= t(".overview.title") %></h3>
       <p><%= t(".overview.message") %></p>
