--- a/app/views/giveaways/select_campaign.html.erb
+++ b/app/views/giveaways/select_campaign.html.erb
@@ -5,7 +5,7 @@
     <p><%= t 'giveaway.join_campaign_alternative' %></p>
     <%= link_to t('giveaway.create_post'), new_post_path({category: params[:category]}), class: 'btn btn-inverse btn-sm' %>
   </div>
-  <%= image_tag @category.img_url, class: "col-lg-6", onerror: "this.src='#{image_path('home_bg.jpg')}'" %>
+  <%= image_tag @category.img_url, class: "col-lg-6 img-responsive", onerror: "this.src='#{image_path('home_bg.jpg')}'" %>
 </div>
 <div class="container m-t-2 p-b-3">
   <%= render 'campaigns/campaigns' %>
