--- a/app/assets/stylesheets/giveaways.scss
+++ b/app/assets/stylesheets/giveaways.scss
@@ -6,3 +6,10 @@
     width: 100%;
   }
 }
+
+.main-content.giveaways.select_campaign {
+  .split-layout {
+    height: 380px;
+    overflow-y: hidden;
+  }
+}
