--- a/app/assets/stylesheets/bootstrap-fix.scss
+++ b/app/assets/stylesheets/bootstrap-fix.scss
@@ -3,10 +3,10 @@ input[type="date"].form-control {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: GothamBold;
 }
 p, div {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Gotham;
 }
 
 .checkbox label input {
