--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -72,7 +72,7 @@
   <div class="col-md-10 posts-container">
     <%= will_paginate @posts, class: 'top-pagination pull-right' %>
 
-    <div class="posts">
+    <div class="post-items">
     <% @posts.each do |post| %>
 
         <div class="card">
@@ -84,7 +84,7 @@
             <%= active_link_to I18n.t('posts.claim'), post_path(post), class: 'btn btn-primary pull-right' %>
           </div>
         </div>
-      
+
     <% end %>
     </div>
   </div>
