--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 
 @font-face {
   font-family: Gotham;
-  src: asset-url('assets/gotham_medium.ttf') format('truetype');
+  src: font-url( asset-path("assets/gotham_medium.ttf") ) format('truetype');
   font-weight: normal;
 }
 
