--- a/app/assets/stylesheets/giveaways.scss
+++ b/app/assets/stylesheets/giveaways.scss
@@ -12,4 +12,13 @@
     height: 380px;
     overflow-y: hidden;
   }
+
+  .create-post-btn {
+    color: #fff;
+    text-decoration: underline;
+
+    &:hover {
+      color: $primary_color;
+    }
+  }
 }
